# byteracer

./: flake.nix
server/: Cargo.toml
server/migrations/2024-03-22-211428_scores/: down.sql  up.sql
server/src/: main.rs  models.rs  schema.rs
