[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
diesel = { version = "2.1.5", features = ["postgres"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.tokio]
version = "1.36.0"
features = ["rt-multi-thread"]
